--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-blog-post.git"
     },
     "dependencies": {
-        "bootstrap": "4.3.1",
-        "jquery": "3.4.1"
+        "bootstrap": "^4.3.1",
+        "bootstrap-social": "^5.1.1",
+        "font-awesome": "^4.7.0",
+        "icons": "^1.0.0",
+        "jquery": "3.4.1",
+        "popper.js": "^1.16.1"
     },
     "devDependencies": {
         "browser-sync": "2.26.7",
